--- a/TPO_Front_ecommerce_grupo4/index.html
+++ b/TPO_Front_ecommerce_grupo4/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Tienda - Los deseos de los 4 del Deporte</title>
   </head>
   <body>
     <div id="root"></div>
